--- a/components/camel-ai/camel-langchain4j-agent/src/main/docs/langchain4j-agent-component.adoc
+++ b/components/camel-ai/camel-langchain4j-agent/src/main/docs/langchain4j-agent-component.adoc
@@ -21,10 +21,21 @@ The LangChain4j Agent component provides comprehensive AI agent capabilities by 
 
 The LangChain4j Agent component offers the following key features:
 
+* **Agent-Based Architecture**: Flexible agent creation using the `Agent` API interface
 * **Tool Integration**: Seamless integration with Camel routes via the `langchain4j-tools` component
 * **Conversation Memory**: Persistent chat memory for maintaining conversation context
 * **RAG Support**: Integration with retrieval systems for naive and advanced RAG
 * **Guardrails**: Input and output validation and transformation
+* **Configuration Flexibility**: Centralized agent configuration using `AgentConfiguration`
+
+== Component Options
+
+The component has been simplified to use only two main options:
+
+* **agent**: Reference to an `Agent` implementation registered in the Camel registry
+* **tags**: Tags for discovering and calling Camel route tools (optional)
+
+All other configuration (chat models, memory, RAG, guardrails) is now handled through the `AgentConfiguration` when creating agents.
 
 == URI format
 
@@ -58,66 +69,108 @@ include::spring-boot:partial$starter.adoc[]
 
 == Usage
 
-=== Using a specific Chat Model
+=== Creating Custom Agents
 
-The Camel LangChain4j chat component provides an abstraction for interacting with various types of Large Language Models (LLMs) supported by https://github.com/langchain4j/langchain4j[LangChain4j].
+Starting from Camel 4.14, the LangChain4j Agent component uses an agent-based architecture where agents are created by implementing the `org.apache.camel.component.langchain4j.agent.api.Agent` interface. The component provides two built-in agent implementations:
 
-==== Integrating with specific LLM
+* `AgentWithMemory` - For chat interactions with conversation history
+* `AgentWithoutMemory` - For stateless chat interactions
 
-To integrate with a specific LLM, users should follow the steps described below, which explain
-how to integrate with OpenAI.
+==== Agent Configuration
 
-Add the dependency for LangChain4j OpenAI support:
+Agents are configured using the `AgentConfiguration` class which provides a fluent API for setting up:
 
-.Example
-[source,xml]
-----
-<dependency>
-      <groupId>dev.langchain4j</groupId>
-      <artifactId>langchain4j-open-ai</artifactId>
-    <version>x.x.x</version>
-</dependency>
-----
+* Chat Model
+* Chat Memory Provider (for memory-enabled agents)
+* Retrieval Augmentor (for RAG functionality)
+* Input and Output Guardrails
 
-Initialize the OpenAI Chat Model, and add it to the Camel Registry:
+==== Creating an Agent without Memory
 
 [source, java]
 ----
-ChatModel model = OpenAiChatModel.builder()
-                .apiKey(openApiKey)
-                .modelName(GPT_3_5_TURBO)
-                .temperature(0.3)
-                .timeout(ofSeconds(3000))
-                .build();
-context.getRegistry().bind("chatModel", model);
+// Create and configure the chat model
+ChatModel chatModel = OpenAiChatModel.builder()
+    .apiKey(openApiKey)
+    .modelName(GPT_3_5_TURBO)
+    .temperature(0.3)
+    .timeout(ofSeconds(3000))
+    .build();
+
+// Create agent configuration
+AgentConfiguration configuration = new AgentConfiguration()
+    .withChatModel(chatModel)
+    .withInputGuardrailClasses(List.of())
+    .withOutputGuardrailClasses(List.of());
+
+// Create the agent
+Agent simpleAgent = new AgentWithoutMemory(configuration);
+
+// Register the agent in the Camel context
+context.getRegistry().bind("simpleAgent", simpleAgent);
 ----
 
-Use the model in the Camel LangChain4j Agent Producer
+Use the agent in your Camel route:
 
 [source, java]
 ----
- from("direct:chat")
-      .to("langchain4j-agent:test?chatModel=#chatModel")
+from("direct:chat")
+    .to("langchain4j-agent:test?agent=#simpleAgent")
+----
 
+==== Creating an Agent with Memory
+
+[source, java]
+----
+// Create chat model (same as above)
+ChatModel chatModel = OpenAiChatModel.builder()...
+
+// Create memory provider
+ChatMemoryProvider memoryProvider = memoryId -> MessageWindowChatMemory.builder()
+    .id(memoryId)
+    .maxMessages(10)
+    .chatMemoryStore(persistentStore) // Your persistent store implementation
+    .build();
+
+// Create agent configuration with memory
+AgentConfiguration configuration = new AgentConfiguration()
+    .withChatModel(chatModel)
+    .withChatMemoryProvider(memoryProvider)
+    .withInputGuardrailClasses(List.of())
+    .withOutputGuardrailClasses(List.of());
+
+// Create the agent
+Agent memoryAgent = new AgentWithMemory(configuration);
+
+// Register the agent
+context.getRegistry().bind("memoryAgent", memoryAgent);
 ----
 
 [NOTE]
 ====
-To switch to another Large Language Model and its corresponding dependency, replace the `langchain4j-open-ai` dependency with the appropriate dependency for the desired model. Update the initialization parameters accordingly in the code snippet provided above.
+Add the `camel-langchain4j-agent-api` dependency to access the Agent API classes in your application:
+
+[source,xml]
+----
+<dependency>
+    <groupId>org.apache.camel</groupId>
+    <artifactId>camel-langchain4j-agent-api</artifactId>
+    <version>x.x.x</version>
+</dependency>
+----
 ====
 
 === Basic Chat with only a userMessage
 
-For simple chat interactions, you can use the producer only by setting the chatModel.
+For simple chat interactions, you can use an agent without memory.
 
 [source,java]
 ----
 from("direct:chat")
-    .to("langchain4j-agent:simple?chatModel=#chatModel")
-
+    .to("langchain4j-agent:simple?agent=#simpleAgent")
 ----
 
-The body can either contain the prompt as a String, or you can create an object of type *org.apache.camel.component.langchain4j.agent.AiAgentBody* containing the userMessage.
+The body can either contain the prompt as a String, or you can create an object of type *org.apache.camel.component.langchain4j.agent.api.AiAgentBody* containing the userMessage.
 
 .Usage example with a body as String:
 [source, java]
@@ -138,16 +191,15 @@ String response = template.requestBody("direct:chat", body, String.class);
 
 === Basic Chat with user and system messages
 
-For simple chat interactions, you can use the producer only by setting the chatModel.
+For chat interactions with system prompts, you can use an agent without memory.
 
 [source,java]
 ----
 from("direct:chat")
-    .to("langchain4j-agent:simple?chatModel=#chatModel")
-
+    .to("langchain4j-agent:simple?agent=#simpleAgent")
 ----
 
-The body can either contain the user prompt as a String and specifying the *CamelLangChain4jAgentSystemMessage* header for the system prompt, or you can create an object of type *org.apache.camel.component.langchain4j.agent.AiAgentBody* containing both *userMessage* and *systemMessage*.
+The body can either contain the user prompt as a String and specifying the *CamelLangChain4jAgentSystemMessage* header for the system prompt, or you can create an object of type *org.apache.camel.component.langchain4j.agent.api.AiAgentBody* containing both *userMessage* and *systemMessage*.
 
 .Usage example with a body as String:
 [source, java]
@@ -174,7 +226,7 @@ String response = template.requestBody("direct:chat", body, String.class);
 
 === Chat with Tools
 
-Integrate with Camel routes as tools. This is powerful, because under the hood the LangChain4j Agent component reuses under the hood LangChain4j AIService to integrate with any Camel Routes defined using the Camel LangChain4j Tools component.
+Integrate with Camel routes as tools. The LangChain4j Agent component integrates with Camel Routes defined using the Camel LangChain4j Tools component via the `tags` parameter.
 
 [source,java]
 ----
@@ -185,10 +237,9 @@ from("langchain4j-tools:userDb?tags=users&description=Query user database&parame
 from("langchain4j-tools:weather?tags=weather&description=Get weather information&parameter.city=string")
     .setBody(constant("{\"weather\": \"sunny\", \"temperature\": \"22°C\"}"));
 
-// Agent with tools
+// Agent with tools (using the created agent)
 from("direct:chat")
-    .to("langchain4j-agent:tools?chatModel=#chatModel&tags=users,weather")
-
+    .to("langchain4j-agent:tools?agent=#simpleAgent&tags=users,weather");
 ----
 
 .Usage example :
@@ -208,17 +259,26 @@ There's no need to add Camel LangChain4j Tools component as a dependency when us
 
 === RAG Integration
 
-For the current version of the component, RAG is an advanced feature that requires adding a Retrieval Augmentor of type *dev.langchain4j.rag.RetrievalAugmentor*. This class enables to use either naive or advanced RAG.
-For more information and examples you can check the https://docs.langchain4j.dev/tutorials/rag#retrieval-augmentor[LangChain4j RAG documentation page]
-
+RAG (Retrieval-Augmented Generation) is supported by configuring a `RetrievalAugmentor` in the `AgentConfiguration`. Create an agent with RAG capabilities:
 
 [source,java]
 ----
+// Create the retrieval augmentor (shown below)
+RetrievalAugmentor retrievalAugmentor = createRetrievalAugmentor();
 
+// Create agent configuration with RAG
+AgentConfiguration configuration = new AgentConfiguration()
+    .withChatModel(chatModel)
+    .withRetrievalAugmentor(retrievalAugmentor)
+    .withInputGuardrailClasses(List.of())
+    .withOutputGuardrailClasses(List.of());
 
+Agent ragAgent = new AgentWithoutMemory(configuration);
+context.getRegistry().bind("ragAgent", ragAgent);
+
+// Use the RAG agent
 from("direct:chat")
-    .to("langchain4j-agent:rag?chatModel=#chatModel&retrievalAugmentor=#retrievalAugmentor")
-
+    .to("langchain4j-agent:rag?agent=#ragAgent")
 ----
 
 .Usage example with Retrieval Augmentor serving as naive RAG :
@@ -245,30 +305,23 @@ String response = template.requestBody("direct:chat", body, String.class);
 ----
 
 === Chat with Memory
-For the current version of the component, Memory is an advanced feature that requires adding a Chat Memory Provider of type dev.langchain4j.memory.chat.ChatMemoryProvider. This class enables using a dedicated LangChain4j ChatMemoryProvider.
-For more information and examples you can check the https://docs.langchain4j.dev/tutorials/chat-memory[LangChain4j Chat Memory documentation page].
+
+Memory functionality is supported by using `AgentWithMemory` and configuring a `ChatMemoryProvider` in the `AgentConfiguration`. The memory works for multiple users/sessions.
 
 [NOTE]
 ====
 The component requires using a Chat Memory Provider that uses a https://docs.langchain4j.dev/tutorials/chat-memory#persistence[persistent memory store].
 ====
 
-The memory works for multiple users/sessions. For each context window, the users needs to set the memory ID.
-2 ways to set the memory ID:
+The memory works for multiple users/sessions. For each context window, the users needs to set the memory ID:
 - By setting the Header CamelLangChain4jAgentMemoryId. This supposes that user is using a body as String.
 - By setting the AiAgentBody.memoryId field. This supposes that that user is using a body as AiAgentBody.
 
-[NOTE]
-====
-If there's no need to use different sessions, it is recommended to use the same memory ID.
-====
-
-.Example of Route
+.Example of Route with Memory Agent
 [source,java]
 ----
 from("direct:chat")
-    .to("langchain4j-agent:memory?chatModel=#chatModel&chatMemoryProvider=#chatMemoryProvider")
-
+    .to("langchain4j-agent:memory?agent=#memoryAgent")
 ----
 
 .Example of usage with AiAgentBody
@@ -291,18 +344,23 @@ String response = template.requestBody("direct:chat", request, String.class);
 
 
 === Input and Output Guardrails
-There's a possibility to use these advanced features to add Input and Output Guardrails to the AiAgent Route.
-For this, create classes defining InputGuardrails and OutputGuardrails as defined in the https://docs.langchain4j.dev/tutorials/guardrails[LangChain4j Guardrails documentation] page.
 
-The list of input guardrails classes should be defined as inputGuardrails option as a list of classes separated by comma.
-The list of output guardrails classes should be defined as outputGuardrails option as a list of classes separated by comma.
+Guardrails are configured in the `AgentConfiguration` using the fluent API methods. Create classes defining InputGuardrails and OutputGuardrails as defined in the https://docs.langchain4j.dev/tutorials/guardrails[LangChain4j Guardrails documentation] page.
 
 [source,java]
 ----
+// Create agent configuration with guardrails
+AgentConfiguration configuration = new AgentConfiguration()
+    .withChatModel(chatModel)
+    .withInputGuardrailClassesList("com.example.MyInputGuardrail")
+    .withOutputGuardrailClassesList("com.example.MyOutputGuardrail1,com.example.MyOutputGuardrail2");
+
+Agent safeAgent = new AgentWithoutMemory(configuration);
+context.getRegistry().bind("safeAgent", safeAgent);
+
+// Use the agent with guardrails
 from("direct:agent-with-guardrails")
-    .to("langchain4j-agent:safe?chatModel=#chatModel" +
-        "&inputGuardrails=com.example.MyInputGuardrail" +
-        "&outputGuardrails=com.example.MyOutputGuardrail1,com.example.MyOutputGuardrail2")
+    .to("langchain4j-agent:safe?agent=#safeAgent")
 ----
 
 [NOTE]
