chore(docs): Improve docs navigation
- Use "EIPs" as doc title, because "Enterprise Integration Patterns" is too long and breaks the nav layout
- Use proper indentation for reference docs
- Move FAQs to the very end of the user manual navigation

--- a/core/camel-core-engine/src/main/docs/modules/eips/pages/enterprise-integration-patterns.adoc
+++ b/core/camel-core-engine/src/main/docs/modules/eips/pages/enterprise-integration-patterns.adoc
@@ -1,4 +1,7 @@
 = Enterprise Integration Patterns
+:doctitle: EIPs
+:shortname: eips
+:description: Enterprise Integration Patterns
 
 Camel supports most of the
 http://www.eaipatterns.com/toc.html[Enterprise Integration Patterns]
